Investigating JWT issue, realised was missing bearer token authorisation header in frontend requests, updated datetime method, continuing testing, will split them up now

--- a/flask-server/.env.example
+++ b/flask-server/.env.example
@@ -1,7 +1,8 @@
 # Rename or create a copy of this file as ".env"
 
-# Create a secret key
+# Create secret keys
 SECRET_KEY=
+JWT_SECRET_KEY=
 
 # Add your database credentials
 HOST=localhost
