--- a/flask-server/.env
+++ b/flask-server/.env
@@ -1,1 +1,13 @@
-SECRET_KEY=waeiuhiawehaiuwehiehiaehiew
+# Rename or create a copy of this file as ".env"
+
+# Create secret keys
+SECRET_KEY=ReactDev
+JWT_SECRET_KEY=ReactDev
+
+# Add your database credentials
+HOST=localhost
+USER=root
+PASSWORD=root1234
+PORT=3306
+DATABASE=introverse_dev
+TESTDB=introverse_test
