--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "homepage": "https://Angel2001-programmer.github.io/finalProject/",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
@@ -20,7 +22,11 @@
     "react-token-auth": "^2.3.8",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "web-vitals": "^2.1.4"
+    "save-dev": "^0.0.1-security",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
